# INFO702-TP2

./: Accessor.hpp  CMakeLists.txt  CR.md  Color.hpp  Histogramme.cpp  Histogramme.hpp  Image2D.hpp  Image2DReader.hpp  Image2DWriter.hpp  Makefile  cathodic-screen.cpp  colors.ppm  colors2.ppm  egaliseur-couleur.cpp  egaliseur-graylevel.cpp  generate-histogramme.cpp  invert-red-blue.cpp  kowloon-eg.ppm  kowloon-egal.ppm  kowloon-histo.ppm  kowloon-inv.ppm  kowloon-sepia.ppm  lena-eg.pgm  old-kowloon.ppm  papillon-green.pgm  papillon_blue.ppm  papillon_red.ppm  papillon_vert.ppm  save-channels.cpp  save-green-channel.cpp  sepia.cpp  testColorImage2D.cpp  testGrayLevelImage2D.cpp  testHSV.cpp
